--- a/src/components/HeaderMenu/HeaderMenu.module.scss
+++ b/src/components/HeaderMenu/HeaderMenu.module.scss
@@ -1,5 +1,28 @@
 .headerMenuContainer {
-    width: 100%;
-    height: 64px;
-    background-color: aqua;
+  width: 100%;
+  height: 88px;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.2);
+  display: flex;
+  align-items: center;
+  color: #6f777d;
+  gap: 18px;
+  padding: 0 10%;
+}
+
+.headerMenuItemBox {
+  gap: 50px;
+  display: flex;
+  padding: 0 20px;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 50px 0 auto;
+}
+
+.headerMenuLink {
+  display: inline-block;
+  position: relative;
+  color: #6f777d;
+  cursor: pointer;
+  padding-bottom: 3px;
+  font-size: 0.8em;
 }
