--- a/src/containers/AppPage/AppPage.module.scss
+++ b/src/containers/AppPage/AppPage.module.scss
@@ -1,5 +1,6 @@
 .appPageContainer {
     width: 100%;
-    height: 100vh;
+    height: calc(100vh - 88px);
     background-color: white;
+    display: flex;
 }
