--- a/src/components/HeaderMenu/HeaderMenu.module.scss
+++ b/src/components/HeaderMenu/HeaderMenu.module.scss
@@ -26,3 +26,21 @@
   padding-bottom: 3px;
   font-size: 0.8em;
 }
+
+.headerMenuLink::after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #6f777d;
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.headerMenuLink:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
