--- a/src/components/SideMenu/SideMenu.module.scss
+++ b/src/components/SideMenu/SideMenu.module.scss
@@ -2,4 +2,28 @@
     width: 20%;
     height: 100%;
     background-color: white;
+    padding: 50px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+    color: #6f777d;
+    border-right: 1px solid rgba(128, 128, 128, 0.2);
+    overflow-y: scroll;
+}
+
+.individualBox {
+    width: 80%;
+    min-height: 50px;
+    border: 1px solid #6f777d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s ease-in-out;
+    cursor: pointer;
+}
+
+.individualBox:hover{
+    background-color: #6f777d;
+    color: white;
 }
